Extends Article html, debuggs functions

--- a/Artikel/src/main/resources/templates/articleView.html
+++ b/Artikel/src/main/resources/templates/articleView.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1 th:text="${article.getName()}"> Hi </h1>
+    <p th:text="${article.getComment()}"></p>
+    <p th:text="${article.getPersonID()}"></p>
+    <p th:text="${article.getDeposit()}"></p>
+    <p th:text="${article.getRent()}"></p>
 
 </body>
 </html>
