--- a/Artikel/src/main/resources/templates/viewAll.html
+++ b/Artikel/src/main/resources/templates/viewAll.html
@@ -8,7 +8,7 @@
     <ul th:each="article:${articles}">
     <li th:text="${article.getName()}"> Hi </li>
     <li th:text="${article.getRent()}"></li>
-    <a th:href="|${article.articleID}|">Go to Article</a>
+    <a th:href="|/article/${article.articleID}|">Go to Article</a>
     <br>
     </ul>
 </body>
