changed controller and html

--- a/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/templates/addNewPerson.html
+++ b/Docker-Compose-Tests/DatabaseInitializer/src/main/resources/templates/addNewPerson.html
@@ -7,17 +7,10 @@
 <body>
 <p><b>Add a new person to the Database</b></p>
 <div class="col-md-6">
-    <table class="table table-hover">
-        <form method="post" th:object="${person}" >
-            <tr>
-                <th scope="row">Name</th>
-                <td> <Input type="text" th:field="*{name}"/>  </td>
-                <th scope="row"></th>
-                <td> <button type="submit" class="btn btn-primary">Add to database!</button></td>
-            </tr>
-            </tr>
+        <form method="post" href="/">
+            <input type="text" name="name">
+            <button type="submit">Save</button>
         </form>
-    </table>
 </div>
 </body>
 </html>
