adds the adding feature to the programm

--- a/Artikel/src/main/resources/templates/viewAll.html
+++ b/Artikel/src/main/resources/templates/viewAll.html
@@ -11,5 +11,6 @@
     <a th:href="|/article/${article.articleID}|">Go to Article</a>
     <br>
     </ul>
+    <a th:href="|/newArticle/|">Add Article</a>
 </body>
 </html>
