--- a/Artikel/src/main/resources/templates/newArticle.html
+++ b/Artikel/src/main/resources/templates/newArticle.html
@@ -6,13 +6,14 @@
 </head>
 <body>
 
-<form method="post" th:object="${article}" >
+<form method="post" th:object="${article}" enctype="multipart/form-data" action="">
+    <table>
     <tr>
         <th scope="row">Name</th>
         <td> <Input type="text" th:field="*{name}"/>  </td>
     </tr>
     <tr>
-        <th scope="row">Comment</th>
+        <th scope="row">Beschreibung</th>
         <td> <Input type="text" th:field="*{comment}"/> </td>
     </tr>
     <tr>
@@ -20,23 +21,27 @@
         <td> <Input type="number" th:field="*{personID}"/> </td>
     </tr>
     <tr>
-        <th scope="row">deposti</th>
+        <th scope="row">Kaution</th>
         <td> <Input type="number" th:field="*{deposit}"/>  </td>
     </tr>
     <tr>
-        <th scope="row">rent</th>
+        <th scope="row">Miete</th>
         <td> <Input type="number" th:field="*{rent}"/> </td>
     </tr>
     <tr>
-        <th scope="row">available</th>
+        <th scope="row">Bild zum hochladen auswählen:</th>
+        <td> <Input th:field="*{file}" type="file"/> </td>
+    </tr>
+    <tr>
+        <th scope="row">Verfügbar?</th>
         <td> <Input type="checkbox" th:field="*{available}"/> </td>
     </tr>
         <th scope="row"></th>
         <td> <button type="submit">Berechnen</button></td>
         <td><a th:href="|/article/|"> nbj abbrechen</a></td>
     </tr>
+    </table>
 </form>
-
 
 </body>
 </html>
