--- a/Benutzer/src/main/resources/templates/signUp.html
+++ b/Benutzer/src/main/resources/templates/signUp.html
@@ -1,27 +1,29 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-<title>Ausleih</title>
+    <meta charset="utf-8">
+    <title>Ausleih</title>
 </head>
 <body>
-	<div>
-		<h1 class="container" style="text-align: center;">Ausleih App-Registrieren</h1>
-		<form method="post" style="text-align: center;">
-			<p>
-				Username: <input th:name="username" type="text"/>
-			</p>
-			<p>
-				<strong> Passwort</strong>: <input name="password" type="password" placeholder="Passwort nicht nötig"/>
-			</p>
-            <p>
-				Name: <input th:name="name" type="text"/>
-			</p>
-            <p>
-				Email: <input th:name="email" type="text"/>
-			</p>
-            <input value="Signup" name="action" type="submit">
-		</form>
-	</div>
+<div>
+    <h1 class="container" style="text-align: center;">Ausleih App-Registrieren</h1>
+    <form method="post" style="text-align: center;">
+        <p th:text="${error} + ''"/>
+        <p>
+            Username: <input th:name="username" type="text"/>
+        </p>
+        <p>
+            <strong> Passwort</strong>: <input name="password" type="password" placeholder="Passwort nicht nötig"/>
+        </p>
+        <p>
+            Name: <input th:name="name" type="text"/>
+        </p>
+        <p>
+            Email: <input th:name="email" type="text"/>
+        </p>
+        <input value="Signup" name="action" type="submit">
+        <input value="backToLogin" name="action" type="submit">
+    </form>
+</div>
 </body>
 </html>
