adds some bootstrap to the html files

--- a/Artikel/src/main/resources/templates/articleView.html
+++ b/Artikel/src/main/resources/templates/articleView.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.ord">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Article View</title>
+    <title >Article View</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
 <body>
-    <h1 th:text="${article.getName()}"> Hi </h1>
-    <p th:text="${article.getComment()}"></p>
-    <p th:text="${article.getPersonID()}"></p>
-    <p th:text="${article.getDeposit()}"></p>
-    <p th:text="${article.getRent()}"></p>
+    <div class="container">
+        <h1 th:text="${article.getName()}"></h1>
+        <p th:text="${article.getComment()}"></p>
+        <p th:text="${article.getPersonID()}"></p>
+        <p th:text="${article.getDeposit()}"></p>
+        <p th:text="${article.getRent()}"></p>
 
-    <td th:switch="${article.isAvailable()}">
-        <span th:case="true"><i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
-        <span th:case="false"><i class="fa fa-times-circle-o" aria-hidden="true"></i></span>
+        <td th:switch="${article.isAvailable()}">
+            <span th:case="true"><i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
+            <span th:case="false"><i class="fa fa-times-circle-o" aria-hidden="true"></i></span>
 
-    </td>
-    <td><a th:href="|/article/|"> Zurück zur Übersicht</a></td>
+        </td>
 
+        <td>
+            <a th:href="|/article/|">
+                <button class="btn btn-danger" type="button"> Back to Overview</button>
+            </a>
+        </td>
+    </div>
 </body>
 </html>
