--- a/Artikel/src/main/resources/templates/newArticle.html
+++ b/Artikel/src/main/resources/templates/newArticle.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
 <body>
+<div class="container">
+    <h1>create a new Articles</h1>
 
 <form method="post" th:object="${article}" enctype="multipart/form-data" action="">
     <table>
@@ -36,12 +43,21 @@
         <th scope="row">Verfügbar?</th>
         <td> <Input type="checkbox" th:field="*{available}"/> </td>
     </tr>
+
         <th scope="row"></th>
-        <td> <button type="submit">Berechnen</button></td>
-        <td><a th:href="|/article/|"> nbj abbrechen</a></td>
-    </tr>
+
+        <td>
+            <button type="submit" class="btn btn-primary">Create new Article</button>
+        </td>
+
+        <td>
+            <a th:href="|/article/|" >
+                <button class="btn btn-danger" type="button"> nbj abbrechen </button>
+            </a>
+        </td>
     </table>
 </form>
+</div>
 
 </body>
 </html>
