--- a/Artikel/src/main/resources/templates/uploadResult.html
+++ b/Artikel/src/main/resources/templates/uploadResult.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
 
 <h3>Hochgeladene Datei:</h3>
 <ul >
@@ -15,6 +20,7 @@
 <ul>
     <li style="color:red;" th:text="${uploadedFile}"></li>
 </ul>
+</div>
 
 </body>
 </html>
