--- a/Artikel/src/main/resources/templates/viewAll.html
+++ b/Artikel/src/main/resources/templates/viewAll.html
@@ -3,14 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Article View</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
 <body>
-    <ul th:each="article:${articles}">
-    <li th:text="${article.getName()}"> Hi </li>
-    <li th:text="${article.getRent()}"></li>
-    <a th:href="|/article/${article.articleID}|">Go to Article</a>
-    <br>
-    </ul>
-    <a th:href="|/newArticle/|">Add Article</a>
+    <div class="container">
+     <h1 class="display-3"> Overview of all current articles</h1>
+        <div class="row mb-3">
+            <div class="col-md-6"  th:each="article:${articles}">
+        <table class="table table-hover">
+            <tr>
+                <td>Article:</td>
+                <td th:text="${article.getName()}"></td>
+            </tr>
+            <tr>
+                <td>rent:</td>
+                <td th:text="${article.getRent()}"></td>
+            </tr>
+            <tr>
+                <td>
+                    <a th:href="|/article/${article.articleID}|">
+                        <button class="btn btn-success" type="button"> more Informations </button>
+                    </a>
+                </td>
+            </tr>
+        </table>
+            </div>
+        </div>
+
+        <a th:href="|/newArticle/|">
+            <button class="btn btn-primary" type="button"> new article</button>
+        </a>
+    </div>
 </body>
 </html>
