added request function

--- a/Lending/src/main/resources/templates/inquiry.html
+++ b/Lending/src/main/resources/templates/inquiry.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h>Your request is being processed</h>
+<dr>
+<a th:href="@{/{id}(id = ${id})}" role="button">overview</a>
+</dr>
 </body>
 </html>
