--- a/Lending/src/main/resources/templates/overviewLendings.html
+++ b/Lending/src/main/resources/templates/overviewLendings.html
@@ -20,8 +20,13 @@
         <div th:text="${lending.deposit}">0</div>
         <h3>Rent =</h3>
         <div th:text="${lending.rent}">0</div>
-    </div>
+        <form th:action="@{/lendings/{id}(id = ${id})}" method="post">
+            <input type="hidden" name="lendingID" th:value="${lending.lendingID}">
+            <input type="hidden" name="articleID" th:value="${lending.articleID}">
 
+            <button type="finish">Return</button>
+        </form>
+    </div>
 </table>
 <!-- Artikelzurückgeben -->
 </body>
