WIr haben Thymeleaf auf user.attribute gemacht damit wir im Modell nicht alle module einzeln übergeben müssen Franz und Jeff

--- a/Benutzer/src/main/resources/templates/signUp.html
+++ b/Benutzer/src/main/resources/templates/signUp.html
@@ -21,6 +21,9 @@
         <p>
             Email: <input th:name="email" type="text"/>
         </p>
+        <p>
+            Address: <input th:name="address" type="text" placeholder="Hausnummer,Strasse,Ortschaft"/>
+        </p>
         <input value="Signup" name="action" type="submit">
         <input value="backToLogin" name="action" type="submit">
     </form>
