implement file upload handling

--- a/Artikel/src/main/resources/templates/uploadResult.html
+++ b/Artikel/src/main/resources/templates/uploadResult.html
@@ -20,6 +20,9 @@
 <ul>
     <li style="color:red;" th:text="${uploadedFile}"></li>
 </ul>
+    <a th:href="|/article/|">
+        <button class="btn btn-danger" type="button"> Back to Overview</button>
+    </a>
 </div>
 
 </body>
