--- a/Artikel/src/main/resources/templates/viewAll.html
+++ b/Artikel/src/main/resources/templates/viewAll.html
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <a th:href="|/newArticle/|">
+        <a th:href="|/article/new/|">
             <button class="btn btn-primary" type="button"> new article</button>
         </a>
     </div>
