--- a/Lending/src/main/resources/templates/overview.html
+++ b/Lending/src/main/resources/templates/overview.html
@@ -13,18 +13,18 @@
         <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
         padding: 0em 1em 1em 1em; background-color:#FFFFFF;text-align:center">
             <h3>Requester =</h3>
-            <div th:text="${request.requesterName}">0</div>
+            <div th:text="${request.lendingPerson.name}">0</div>
             <h3>Article =</h3>                                 <!-- href for the article -->
-            <div th:text="${request.articleName}">0</div>
+            <div th:text="${request.lendedArticle.name}">0</div>
             <h3>Reason to lend it to this person =</h3>
-            <div th:text="${request.requestComment}">0</div>
+            <div th:text="${request.lendedArticle.requestComment}">0</div>
             <h3>Startdate =</h3>
-            <div th:text="${request.startDate}">0</div>
+            <div th:text="${request.formattedStartDate}">0</div>
             <h3>Enddate =</h3>
-            <div th:text="${request.endDate}">0</div>
+            <div th:text="${request.formattedEndDate}">0</div>
             <form th:action="@{/{id}(id = ${id})}" method="post">
                 <fieldset>
-                    <input type="hidden" name="requestID" th:value="${request.requestID}">
+                    <input type="hidden" name="lendingID" th:value="${request.lendingID}">
                     <input type="checkbox" id="yes" name="choice" value="accept">
                     <label for="yes"> accept</label>
                     <input type="checkbox" id="no" name="choice" value="decline">
@@ -42,12 +42,11 @@
         <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
         padding: 0em 1em 1em 1em; background-color:#FFFFFF;text-align:center">
             <h3>Returner =</h3>
-            <div th:text="${return.returnerName}">0</div>
+            <div th:text="${return.lendingPerson.name}">0</div>
             <h3>Article =</h3>                                 <!-- href for the article -->
-            <div th:text="${return.articleName}">0</div>
+            <div th:text="${return.lendedArticle.name}">0</div>
             <form th:action="@{/{id}(id = ${id})}" method="post">
                 <fieldset>
-                    <input type="hidden" name="returnID" th:value="${return.returnID}">
                     <input type="hidden" name="lendingID" th:value="${return.lendingID}">
                     <input type="checkbox" id="yes2" name="choicereturn" value="accept">
                     <label for="yes2"> accept</label>
