--- a/Artikel/src/main/resources/templates/viewAll.html
+++ b/Artikel/src/main/resources/templates/viewAll.html
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.ord">
+
 <head>
     <meta charset="UTF-8">
     <title>Article View</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
+
 <body>
     <div class="container">
-     <h1 class="display-3"> Overview of all current articles</h1>
+        <h1 class="display-3">Übersicht</h1>
         <div class="row mb-3">
             <div class="col-md-6"  th:each="article:${articles}">
-        <table class="table table-hover">
-            <tr>
-                <td>Article:</td>
-                <td th:text="${article.getName()}"></td>
-            </tr>
-            <tr>
-                <td>rent:</td>
-                <td th:text="${article.getRent()}"></td>
-            </tr>
-            <tr>
-                <td>
-                    <a th:href="|/article/${article.articleID}|">
-                        <button class="btn btn-success" type="button"> more Informations </button>
-                    </a>
-                </td>
-            </tr>
-        </table>
+                <table class="table table-hover">
+                    <tr>
+                        <td>Artikel:</td>
+                        <td th:text="${article.getName()}"></td>
+                    </tr>
+                    <tr>
+                        <td>Artikelbild</td>
+                        <td> <img th:src="@{/image/{id} (id = ${article.getImageID()})}" width="250px" height=auto/></td>
+                    </tr>
+                    <tr>
+                        <td>Mietpreis:</td>
+                        <td th:text="${article.getRent()} + '€'"></td>
+                    </tr>
+                    <tr>
+                        <td><a th:href="|/article/${article.articleID}|"><button class="btn btn-success" type="button">Zum Artikel</button></a></td>
+                    </tr>
+                </table>
             </div>
         </div>
-
-        <a th:href="|/article/new/|">
-            <button class="btn btn-primary" type="button"> new article</button>
-        </a>
+        <a th:href="|/article/new/|"><button class="btn btn-primary" type="button">Neuen Artikel anlegen</button></a>
     </div>
 </body>
+
 </html>
