--- a/Login-service/Loginservice/loginservice/src/main/resources/templates/createuser.html
+++ b/Login-service/Loginservice/loginservice/src/main/resources/templates/createuser.html
@@ -14,15 +14,15 @@
     <p id="logintitle">Neues Konto erstellen</p>
     <form id="loginInput" method="post" action="/store">
         <p class="loginText">Name</p>
-        <input class="loginTextfield" id="name" name="name" type="email">
+        <input class="loginTextfield" id="name" name="name" type="text">
         <p class="loginText">Vorname</p>
-        <input class="loginTextfield" id="surname" name="surname" type="email">
+        <input class="loginTextfield" id="surname" name="surname" type="text">
         <p class="loginText">E-Mail-Adresse</p>
         <input class="loginTextfield" id="username" name="username" type="email">
         <p class="loginText">Passwort</p>
         <input class="loginTextfield" id="password" name="password" type="password">
         <p class="loginText">Passwort wiederholen</p>
-        <input class="loginTextfield" id="password" name="password" type="password">
+        <input class="loginTextfield" id="password2" name="password2" type="password">
         <input class="button" type="submit" name="loginButton" value="Registrieren">
     </form>
     <a href="/">
