Fixed new user creation method.

--- a/Login-service/Loginservice/loginservice/src/main/resources/templates/createuser.html
+++ b/Login-service/Loginservice/loginservice/src/main/resources/templates/createuser.html
@@ -12,7 +12,7 @@
 </a>
 <div id="loginform">
     <p id="logintitle">Neues Konto erstellen</p>
-    <form id="loginInput" method="post" action="/store">
+    <form id="loginInput" method="post" href="/">
         <p class="loginText">Name</p>
         <input class="loginTextfield" id="name" name="name" type="text">
         <p class="loginText">Vorname</p>
