--- a/Artikel/src/main/resources/templates/searchArticle.html
+++ b/Artikel/src/main/resources/templates/searchArticle.html
@@ -10,18 +10,9 @@
 
 <body>
     <div class="container">
-        <h1 class="display-3">Übersicht</h1>
-            <form method="get" action="/article/search">
-                <div class="form-group row">
-                    <label for="colFormLabel" class="col-sm-0 col-form-label"></label>
-                    <div class="col-sm-10">
-                        <input type="search" name="query" class="form-control" id="colFormLabel" placeholder="Wonach suchen sie?">
-                    </div>
-                    <div class="col-sm-2">
-                        <button class="btn btn-primary" type="submit">Search</button>
-                    </div>
-                </div>
-            </form>
+
+        <h1 class="display-3">Suche nach <span th:text="|'${query}'|"></span></h1>
+        <div class="row mb-3">
             <div class="col-md-6"  th:each="article:${articles}">
                 <table class="table table-hover">
                     <tr>
@@ -41,7 +32,8 @@
                     </tr>
                 </table>
             </div>
-        <a th:href="|/article/new/|"><button class="btn btn-primary" type="button">Neuen Artikel anlegen</button></a>
+        </div>
+        <a th:href="|/article/|"><button class="btn btn-primary" type="button">Zurück zur Übersicht</button></a>
     </div>
 </body>
 
