abstracts openArticleView and privateArticleView, fixes the mappings

--- a/Artikel/src/main/resources/templates/deleteArticle.html
+++ b/Artikel/src/main/resources/templates/deleteArticle.html
@@ -44,7 +44,7 @@
             <br>
             <td>
                 <button type="submit"  class="btn btn-danger">Löschen</button>
-                <a th:href="|/article/${article.getArticleID()}|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
+                <a th:href="|/article/admin/${article.getArticleID()}|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
             </td>
         </form>
     </div>
