--- a/Artikel/src/main/resources/templates/viewAll.html
+++ b/Artikel/src/main/resources/templates/viewAll.html
@@ -38,7 +38,7 @@
                             <td th:text="${article.getRent()} + '€'"></td>
                         </tr>
                         <tr>
-                            <td><a th:href="|/article/${article.articleID}|"><button class="btn btn-success" type="button">Zum Artikel</button></a></td>
+                            <td><a th:href="|/article/open/${article.articleID}|"><button class="btn btn-success" type="button">Zum Artikel</button></a></td>
                         </tr>
                     </table>
                 </div>
