--- a/Artikel/src/main/resources/templates/viewFromPerson.html
+++ b/Artikel/src/main/resources/templates/viewFromPerson.html
@@ -27,7 +27,7 @@
                             <td th:text="${article.getRent()} + '€'"></td>
                         </tr>
                         <tr>
-                            <td><a th:href="|/article/${article.articleID}|"><button class="btn btn-success" type="button">Zum Artikel</button></a></td>
+                            <td><a th:href="|/article/admin/${article.articleID}|"><button class="btn btn-success" type="button">Zum Artikel</button></a></td>
                         </tr>
                     </table>
                 </div>
