MailController funktioniert nicht lending hat ne null pointer Exception

--- a/Conflict/src/main/resources/templates/conflict admin-case.html
+++ b/Conflict/src/main/resources/templates/conflict admin-case.html
@@ -30,7 +30,7 @@
     <textarea class="form-control" id="conflictTextarea" rows="5" placeholder="Describe your conflict here as precise as possible"></textarea>
   </div>
     <div class="float-right">
-    <button type="button"  value="baxck" class="btn btn-light">back</button>
+    <button type="button"  value="back" class="btn btn-light">back</button>
     <button type="button"  value="winBorrower" class="btn btn-danger">mark as solved for Borrower</button>
             <button type="button" value="winOwner" class="btn btn-success">mark as solved for Owner</button>
        
