--- a/Conflict/src/main/resources/templates/conflict-admin-overview.html
+++ b/Conflict/src/main/resources/templates/conflict-admin-overview.html
@@ -1,46 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="jumbotron text-center">
-  <h1>Conflict Overview</h1>
+    <h1>Conflict Overview</h1>
 </div>
-  
+
 <div class="container">
-  <table class="table table-dark table-striped table-bordered">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr class="clickable-row">
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr class="clickable-row">
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-  </tbody>
-</table>
-     <div class="align-right">
-        <button type="button"  value="back" class="btn btn-light">back</button>
-    <button type="button"  value="show" class="btn btn-light">show conflict</button>
+    <table class="table table-dark table-striped table-bordered">
+        <thead>
+        <tr th:each="lendings: ${lendings}">
+            <td th:text="${lending.id}"/>
+            <td th:text="${lending.lendingPerson.username}"/>
+        </tr>
+        </tbody>
+    </table>
+    <div class="align-right">
+        <button type="button" value="back" class="btn btn-light">back</button>
+        <button type="button" value="show" class="btn btn-light">show conflict</button>
     </div>
 
 </div>
