--- a/Conflict/src/main/resources/templates/conflictUserOpen.html
+++ b/Conflict/src/main/resources/templates/conflictUserOpen.html
@@ -17,7 +17,7 @@
 <form method="post">
     <div class="container">
         <div class="form-group">
-            <label Lending ID</label>
+            <label> Lending ID</label>
             <input th:name="lendingID" class="form-control" type="text" placeholder="insert lendingID">
         </div>
         <div class="form-group">
@@ -29,6 +29,7 @@
             <input type="submit" value="back" name="action">
             <input type="submit" value="open" name="action">
         </div>
+    </div>
 </form>
 </div>
 
