--- a/Conflict/src/main/resources/templates/conflict-admin-overview.html
+++ b/Conflict/src/main/resources/templates/conflict-admin-overview.html
@@ -16,7 +16,7 @@
 <div class="container">
     <table class="table table-dark table-striped table-bordered">
         <thead>
-        <tr th:each="lendings: ${lendings}">
+        <tr th:each="lending: ${lendings}">
             <td th:text="${lending.id}"/>
             <td th:text="${lending.lendingPerson.username}"/>
         </tr>
