--- a/Conflict/src/main/resources/templates/conflict-admin-overview.html
+++ b/Conflict/src/main/resources/templates/conflict-admin-overview.html
@@ -32,6 +32,10 @@
     </table>
     <div class="align-right">
         <button type="button" value="back" class="btn btn-dark">back</button>
+        <select th:field="*{lendings}">
+            <option th:each="lending :${lendings} " th:value="${lending.lendingID}" th:text="${lending.lendingID}">
+            </option>
+        </select>
         <button type="button" value="show" class="btn ">show conflict</button>
     </div>
 
