--- a/Conflict/src/main/resources/templates/conflict-admin-overview.html
+++ b/Conflict/src/main/resources/templates/conflict-admin-overview.html
@@ -31,12 +31,12 @@
         </tbody>
     </table>
     <div class="align-right">
-        <button type="button" value="back" class="btn btn-dark">back</button>
+        <button type="button" value="back" class="btn btn-dark" name="action">back</button>
         <select th:field="*{lendings}">
             <option th:each="lending :${lendings} " th:value="${lending.lendingID}" th:text="${lending.lendingID}">
             </option>
         </select>
-        <button type="button" value="show" class="btn ">show conflict</button>
+        <button type="button" value="show" class="btn" name="action">show conflict</button>
     </div>
 
 </div>
