added overview buttons for borrows and lendings

--- a/Lending/src/main/resources/templates/overviewLendings.html
+++ b/Lending/src/main/resources/templates/overviewLendings.html
@@ -6,6 +6,9 @@
     <title>Ausgeliehene Geräte</title>
 </head>
 <body>
+<dr>
+    <a th:href="@{/{id}(id = ${id})}" role="button">overview</a>
+</dr>
 <p>Sie haben ausgeliehen !</p>
 <table th:each="lending : ${lendings}">
     <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
