Added some new FIleds like RhinoID in database ...

--- a/Mainpage-with-login/rhinoshareapp/src/main/resources/templates/createuser.html
+++ b/Mainpage-with-login/rhinoshareapp/src/main/resources/templates/createuser.html
@@ -12,12 +12,12 @@
 </a>
 <div id="loginform">
     <p id="logintitle">Neues Konto erstellen</p>
-    <form id="loginInput" method="post" href="/">
+    <form id="loginInput" method="post">
         <p class="loginText">Name</p>
         <input class="loginTextfield" id="name" name="name" type="text">
         <p class="loginText">Vorname</p>
         <input class="loginTextfield" id="surname" name="surname" type="text">
-        <p class="loginText">Benutzername</p>
+        <p class="loginText">RhinoID</p>
         <input class="loginTextfield" id="username" name="username" type="text">
         <p class="loginText">E-Mail-Adresse</p>
         <input class="loginTextfield" id="email" name="email" type="email">
