--- a/Mainpage-with-login/rhinoshareapp/src/main/resources/templates/edituser.html
+++ b/Mainpage-with-login/rhinoshareapp/src/main/resources/templates/edituser.html
@@ -22,15 +22,19 @@
         <table>
             <tr>
                 <td>Vorname:</td>
-                <td th:text="">Platzhalter</td>
+                <td th:text="${surname}">Platzhalter</td>
             </tr>
             <tr>
                 <td>Nachname:</td>
-                <td>Platzhalter</td>
+                <td th:text="${name}">Platzhalter</td>
+            </tr>
+            <tr>
+                <td>RhinoID:</td>
+                <td th:text="${username}">Platzhalter</td>
             </tr>
             <tr>
                 <td>Email Adresse:</td>
-                <td>Platzhalter</td>
+                <td th:text="${email}">Platzhalter</td>
             </tr>
         </table>
 
