added my artikelwebseite from mainpagedevbranch, a controllter

--- a/Mainpage-with-login/rhinoshareapp/src/main/resources/templates/mainpage.html
+++ b/Mainpage-with-login/rhinoshareapp/src/main/resources/templates/mainpage.html
@@ -11,6 +11,7 @@
 <ul>
     <li><a class="active" href="#home">Home</a></li>
     <li><a href="#news">News</a></li>
+    <li><a href="/artikel.hmtl">Artikel</a></li>
     <li><a href="#contact">Contact</a></li>
     <li><a href="/edit" th:text="${username}">Benutzer</a></li>
     <li style="float:right"><a href="/logout">Logout</a></li>
