--- a/Mainpage-with-login/rhinoshareapp/src/main/resources/templates/artikel.html
+++ b/Mainpage-with-login/rhinoshareapp/src/main/resources/templates/artikel.html
@@ -17,7 +17,7 @@
 
 <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="#login">Login</a></li>
+    <li><a href="/login">Login</a></li>
     <li><a class="active", href="#artikel">Artikel</a></li>
     <li><a href="#contact">Kontakt</a></li>
     <li style="float:right"><a class="active" href="#about">Über uns</a></li>
