--- a/Conflict/src/main/resources/templates/conflict-admin-overview.html
+++ b/Conflict/src/main/resources/templates/conflict-admin-overview.html
@@ -32,11 +32,11 @@
     </table>
     <div class="align-right">
         <form method="post">
-        <div class="form-group">
-            <button type="submit" value="back" class="btn btn-dark" name="action">back</button>
-            <input th:name="lendingID" type="text" />
-            <button type="submit" value="show" class="btn" name="action">show conflict</button>
-        </div>
+            <div class="form-group">
+                <button type="submit" value="back" class="btn btn-dark" name="action">back</button>
+                <input th:name="lendingID" placeholder="insert LendingID" type="text"/>
+                <button type="submit" value="show" class="btn" name="action">show conflict</button>
+            </div>
         </form>
     </div>
 
