started to add links from the mainpage to the articlepage/controller

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/edituser.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/edituser.html
@@ -11,6 +11,8 @@
         <ul class="navigationbar">
             <li class="navbaritem"><a href="/">Rhino-Übersicht</a></li>
             <li class="navbaritem"><a href="/">News</a></li>
+            <li class="navbaritem"><a href="/artikel/">Artikel</a></li>
+
             <li class="navbaritem"><a href="/rent">Ausleihen</a></li>
             <li class="navbaritem"><a href="/">Contact</a></li>
             <li class="navbaritem" href th:if="${loggedIn == 'false'}">
