--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/rentpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/rentpage.html
@@ -11,6 +11,7 @@
 <ul class="navigationbar">
     <li class="navbaritem"><a href="/">Rhino-Übersicht</a></li>
     <li class="navbaritem"><a href="/">News</a></li>
+    <li class="navbaritem"><a href="/artikel/">Artikel</a></li>
     <li class="navbaritem"><a class="active" href="/rent">Ausleihen</a></li>
     <li class="navbaritem"><a href="">Contact</a></li>
     <li class="navbaritem" href th:if="${loggedIn == 'false'}">
