added conflict overview vor owner and lending person

--- a/Lending/src/main/resources/templates/overview.html
+++ b/Lending/src/main/resources/templates/overview.html
@@ -8,6 +8,7 @@
 <body>
 <a th:href="@{/lendings/{id}(id = ${id})}" role="button">Lendings</a>
 <a th:href="@{/borrows/{id}(id = ${id})}" role="button">Borrows</a>
+<a th:href="@{/conflictPage/{id}(id = ${id})}" role="button">Conflicts</a>
 <a th:href="@{/proPay/{id}(id = ${id})}" role="button">ProPay Account</a>
 <div>
     Your article requests
