--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/createuser.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/createuser.html
@@ -17,6 +17,8 @@
         <input class="loginTextfield" id="name" name="name" type="text">
         <p class="loginText">Vorname</p>
         <input class="loginTextfield" id="surname" name="surname" type="text">
+        <p class="loginText">Adresse</p>
+        <input class="loginTextfield" id="address" name="address" type="text">
         <p class="loginText">RhinoID</p>
         <input class="loginTextfield" id="username" name="username" type="text">
         <p class="loginText">E-Mail-Adresse</p>
