--- a/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
@@ -202,6 +202,8 @@ th, td {
 /*Other Testsite*/
 
 .navigationbar {
+    background-image: url("../img/NavBarBackground.png");
+
     list-style-type: none;
     border-radius: 7px;
     margin: 0;
@@ -216,21 +218,24 @@ th, td {
 
 .navbaritem a {
     display: block;
-    color: black;
+    color: #eeeeee;
+    border-radius: 7px;
     font-family: Geneva;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
+
 .navbaritem a:hover:not(.active) {
-    background-color: #a2c6ed;
+    background-color: rgba(16, 146, 237, 0.51);
     transition-duration: 400ms;
 }
 
 .active {
     background-color: #1092ed;
 }
+
 
 #titleImageTest {
     display: block;
@@ -248,5 +253,29 @@ th, td {
     text-align: center;
 }
 
-/*Artikel*/
+/*Useroverview*/
+
+#useroverview {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    margin-top: 20px;
+    width: 80%;
+}
+
+#useroverview td, #useroverview th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#useroverview tr:nth-child(even){background-color: #f2f2f2;}
+
+#useroverview tr:hover {background-color: #ddd;}
+
+#useroverview th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #5176af;
+    color: white;
+}
 
