--- a/Lending/src/main/resources/templates/conflictPage.html
+++ b/Lending/src/main/resources/templates/conflictPage.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Inquiry</title>
+    <title>Conflicts</title>
 </head>
 <body>
 <table th:each="conflict : ${conflicts}">
@@ -30,8 +30,8 @@
         <div th:text="${yourConflict.lendedArticle.name}">0</div>
         <h3>comment =</h3>
         <div th:text="${yourConflict.lendedArticle.comment}">0</div>
-        <h3>Person you are borrowing from =</h3>
-        <div th:text="${yourConflict.lendedArticle.ownerUser.name}">0</div>
+        <h3>Who was lending your Article =</h3>
+        <div th:text="${yourConflict.lendingPerson}">0</div>
         <h3>Deposit =</h3>
         <div th:text="${yourConflict.lendedArticle.deposit}">0</div>
         <h3>Rent =</h3>
@@ -40,8 +40,7 @@
         <div th:text="${yourConflict.warning}">0</div>
     </div>
 </table>
-<dr>
-   <div Reason : th:text="${error}">0</div>
+<dr>>
 <a th:href="@{/{id}(id = ${id})}" role="button">overview</a>
 </dr>
 </body>
