--- a/Lending/src/main/resources/templates/errorPage.html
+++ b/Lending/src/main/resources/templates/errorPage.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Inquiry</title>
+    <title>Error</title>
 </head>
 <body>
 <h>Your action failed</h>
