Fix create new user form for new address.

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/createuser.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/createuser.html
@@ -17,8 +17,16 @@
         <input class="loginTextfield" id="name" name="name" type="text">
         <p class="loginText">Vorname</p>
         <input class="loginTextfield" id="surname" name="surname" type="text">
-        <p class="loginText">Adresse</p>
-        <input class="loginTextfield" id="address" name="address" type="text">
+        <p class="loginText">Straße</p>
+        <input class="loginTextfield" id="street" name="street" type="text">
+        <p class="loginText">Hausnummer</p>
+        <input class="loginTextfield" id="huosenumber" name="housenumber" type="text">
+        <p class="loginText">PLZ</p>
+        <input class="loginTextfield" id="postalcode" name="postalcode" type="text">
+        <p class="loginText">Wohnort</p>
+        <input class="loginTextfield" id="city" name="city" type="text">
+        <p class="loginText">Land</p>
+        <input class="loginTextfield" id="country" name="country" type="text">
         <p class="loginText">RhinoID</p>
         <input class="loginTextfield" id="username" name="username" type="text">
         <p class="loginText">E-Mail-Adresse</p>
