fixed a minor error and improved the profile editor

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/EditUser/profileoverview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/EditUser/profileoverview.html
@@ -16,7 +16,7 @@
         <p>Name:</p>
         <p><input th:name="surname" type="text" th:placeholder="${user.surname}"/></p>
         <p>Email:</p>
-        <p><input th:name="email" type="text" th:placeholder="${user.email}"/></p>
+        <p><input th:name="email" type="email" th:placeholder="${user.email}"/></p>
         <p>Street:</p>
         <p><input th:name="street" type="text" th:placeholder="${user.address.street}"/></p>
         <p>City:</p>
